updated typo in mongodb db name

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html>
 <head>
 	<title>heavy-krausen</title>
@@ -14,10 +14,10 @@
 <h1>heavy-krausen</h1>
 
 <form class="form-horizontal">
-    <label for="username">Username:</label>
+    <label for="username">username:</label>
     <input type="text" id="username" />
     <br />
-    <label for="password">Password:</label>
+    <label for="password">password:</label>
     <input type="password" id="password" />
     <br />
     <button type="submit" class="btn btn-primary">Login</button>
