--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,12 @@
 <head>
 	<meta charset="UTF-8">
   <title>heavy-krausen | a homebrew api</title>
+	<link rel="stylesheet" type="text/css" href="/dist/css/app.min.css" />
 </head>
 <body>
 
 <h1>Fermenting...</h1>
 
+<script type="text/javascript" src="/dist/js/app.min.js"></script>
 </body>
 </html>
