--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,6 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="dist/css/app.css">
@@ -25,19 +21,99 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="favicon.png">
 
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+
 </head>
 <body>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>Fermenting...</h4>
-        <p>HeavyKrausen | A Homebrew API</p>
+      <div class="navmenu navmenu-default navmenu-fixed-left offcanvas-sm">
+        <a class="navmenu-brand visible-md visible-lg" href="#">HeavyKrausen | API</a>
+        <ul class="nav navmenu-nav">
+          <li>
+            <div class="container">
+                <div class="row">
+                  <div class="well well-sm">
+                      <div class="media">
+                          <a class="thumbnail pull-left" href="#">
+                              <img class="media-object" src="http://www.infotimes.org/sites/all/themes/custom/infotimes_theme/css/default-avatar.jpg">
+                          </a>
+                          <div class="media-body">
+                              <h4 class="media-heading">User Name</h4>
+                      		    <p><span class="label label-info">888 photos</span> <span class="label label-warning">150 followers</span></p>
+                              <p>
+                                  <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-comment"></span> Profile</a>
+                                  <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-heart"></span> Sign Out</a>
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+            	</div>
+            </div>
+          </li>
+          <li><a href="#">Grains</a></li>
+          <li><a href="#">Hops</a></li>
+          <li><a href="#">Yeast</a></li>
+        </ul>
       </div>
-    </div>
-  </div>
+
+      <div class="navbar navbar-default navbar-fixed-top hidden-md hidden-lg">
+        <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".navmenu">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">HeavyKrausen | API</a>
+      </div>
+
+
+      <div class="container">
+        <div class="page-header">
+          <h1 class="text-center">Welcome to HeavyKrausen</h1>
+        </div>
+        <p class="lead text-center">A Homebrew API, for the community, inspired by the community.</p>
+        <div class="container">
+          <div class="row stylish-panel">
+            <div class="col-md-4">
+              <div>
+                <img src="img/beers.jpg" alt="Texto Alternativo" class="img-circle img-thumbnail">
+                <h2>BJCP Styles</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+                <a href="#" class="btn btn-primary" title="See more">See works »</a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div>
+                <img src="img/hops.jpg" alt="Hops" class="img-circle img-thumbnail">
+                <h2>Hops</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+                <a href="#" class="btn btn-primary" title="See more">See works »</a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div>
+                <img src="img/yeast.jpg" alt="Texto Alternativo" class="img-circle img-thumbnail">
+                <h2>Yeast</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+                <a href="#" class="btn btn-primary" title="See more">See works »</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /container -->
+
+      <script src="dist/js/app.min.js"></script>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
