--- a/public/index.html
+++ b/public/index.html
@@ -29,12 +29,14 @@
 </head>
 <body>
 
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- Primary Page Layout -->
+  <!-- Sidebar -->
       <div class="navmenu navmenu-default navmenu-fixed-left offcanvas-sm">
         <a class="navmenu-brand visible-md visible-lg" href="#">HeavyKrausen | API</a>
         <ul class="nav navmenu-nav">
           <li>
+
+            <!-- Admin Panel Menu/ (Hidden unless Logged In) -->
             <div class="container">
                 <div class="row">
                   <div class="well well-sm">
@@ -70,45 +72,17 @@
         <a class="navbar-brand" href="#">HeavyKrausen | API</a>
       </div>
 
-
+      <!-- Home Page Content -->
       <div class="container">
         <div class="page-header">
           <h1 class="text-center">Welcome to HeavyKrausen</h1>
         </div>
         <p class="lead text-center">A Homebrew API, for the community, inspired by the community.</p>
         <div class="container">
-          <div class="row stylish-panel">
-            <div class="col-md-4">
-              <div>
-                <img src="img/beers.jpg" alt="Texto Alternativo" class="img-circle img-thumbnail">
-                <h2>BJCP Styles</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor incididunt ut labore et dolore magna aliqua.
-                </p>
-                <a href="#" class="btn btn-primary" title="See more">See works »</a>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div>
-                <img src="img/hops.jpg" alt="Hops" class="img-circle img-thumbnail">
-                <h2>Hops</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor incididunt ut labore et dolore magna aliqua.
-                </p>
-                <a href="#" class="btn btn-primary" title="See more">See works »</a>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div>
-                <img src="img/yeast.jpg" alt="Texto Alternativo" class="img-circle img-thumbnail">
-                <h2>Yeast</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor incididunt ut labore et dolore magna aliqua.
-                </p>
-                <a href="#" class="btn btn-primary" title="See more">See works »</a>
-              </div>
-            </div>
-          </div>
+          <h4>Stuff is going to happen here.</h4>
+          <p>uisque tristique tellus vehicula dui sollicitudin, vitae sagittis lorem blandit. Vivamus non lorem nec ex iaculis lobortis non in nulla. In ut felis at lacus vehicula mollis. Aliquam id augue congue justo facilisis finibus. Phasellus mattis nulla a ex bibendum posuere. Curabitur hendrerit in nulla et facilisis. Phasellus in condimentum elit. Morbi diam turpis, laoreet at euismod et, ornare scelerisque dolor. Cras vitae vestibulum purus, ut vulputate nulla. Duis a ante molestie ligula vehicula convallis in non justo. Pellentesque viverra ligula sit amet lectus faucibus, sed aliquet nibh aliquet. </p>
+          <p>n hac habitasse platea dictumst. Donec ut ultrices leo. Proin in ligula ut mauris fermentum ornare sed non felis. Nulla pulvinar mi lectus, et feugiat ligula dictum ut. Integer velit purus, fermentum in accumsan sit amet, gravida euismod felis. Vestibulum pellentesque tristique est dapibus eleifend. Sed bibendum turpis nec enim consequat aliquam.</p>
+          <p>Nunc ac gravida justo, a lacinia tellus. Proin placerat metus bibendum sapien porttitor, non interdum risus sagittis. Praesent ac risus at nisi tempor placerat. Vestibulum at auctor metus. Maecenas quis ipsum eget orci vestibulum sollicitudin et sed lorem. Quisque semper blandit venenatis. Integer nec dui libero. Integer id felis et purus pretium bibendum vel ac justo. Sed quis tristique purus. Nullam justo metus, finibus iaculis cursus in, tempus vitae neque. Morbi vitae maximus risus. Aliquam sed placerat tellus.</p>
         </div>
       </div>
       <!-- /container -->
