--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <title>HeavyKrausen | A Homebrew API</title>
   <meta name="description" content="">
   <meta name="author" content="">
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="favicon.png">
@@ -58,9 +59,9 @@
             	</div>
             </div>
           </li>
-          <li><a href="#">Grains</a></li>
-          <li><a href="#">Hops</a></li>
-          <li><a href="#">Yeast</a></li>
+          <li><a href="/styles">BJCP Styles</a></li>
+          <li><a href="/hops">Hops</a></li>
+          <li><a href="/yeast">Yeast</a></li>
         </ul>
       </div>
 
@@ -77,7 +78,6 @@
       <div class="container">
         <div class="page-header">
           <h1 class="text-center">Welcome to HeavyKrausen</h1>
-          <p class="text-center">{{message}}</p>
         </div>
 
       <!-- ANGULAR DYNAMIC CONTENT -->
