--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="heavyKrausen">
 <head>
 
   <!-- Basic Page Needs
@@ -8,7 +8,6 @@
   <title>HeavyKrausen | A Homebrew API</title>
   <meta name="description" content="">
   <meta name="author" content="">
-  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="favicon.png">
@@ -17,7 +16,7 @@
   <link rel="stylesheet" href="dist/css/app.min.css">
 
   <script src="libs/angular/angular.min.js"></script>
-	<script src="libs/angular-route/angular-route.min.js"></script>
+  <script src="libs/angular-ui-router/release/angular-ui-router.min.js"></script>
 
   <script src="src/js/controllers/MainCtrl.js"></script>
   <script src="src/js/controllers/StyleCtrl.js"></script>
@@ -25,16 +24,16 @@
   <script src="src/js/controllers/YeastCtrl.js"></script>
 	<script src="src/js/services/TestService.js"></script>
 
-  <script src="src/js/appRoutes.js"></script>
   <script src="dist/js/app.min.js"></script>
+  <script src="src/js/app.js"></script>
 
 </head>
-<body ng-app="heavyKrausen" ng-controller="MainController">
+<body>
 
   <!-- Primary Page Layout -->
   <!-- Sidebar -->
       <div class="navmenu navmenu-default navmenu-fixed-left offcanvas-sm">
-        <a class="navmenu-brand visible-md visible-lg" href="#">HeavyKrausen | API</a>
+        <a class="navmenu-brand visible-md visible-lg" ui-sref="index">HeavyKrausen | API</a>
         <ul class="nav navmenu-nav">
           <li>
 
@@ -59,9 +58,9 @@
             	</div>
             </div>
           </li>
-          <li><a href="/styles">BJCP Styles</a></li>
-          <li><a href="/hops">Hops</a></li>
-          <li><a href="/yeast">Yeast</a></li>
+          <li><a ui-sref="styles">BJCP Styles</a></li>
+          <li><a ui-sref="hops">Hops</a></li>
+          <li><a ui-sref="yeast">Yeast</a></li>
         </ul>
       </div>
 
@@ -81,7 +80,7 @@
         </div>
 
       <!-- ANGULAR DYNAMIC CONTENT -->
-  	    <div ng-view></div>
+      <div ui-view></div>
       </div>
 
 </body>
