--- a/public/index.html
+++ b/public/index.html
@@ -18,14 +18,14 @@
   <script src="libs/angular/angular.min.js"></script>
   <script src="libs/angular-ui-router/release/angular-ui-router.min.js"></script>
 
-  <script src="src/js/controllers/MainCtrl.js"></script>
-  <script src="src/js/controllers/StyleCtrl.js"></script>
-  <script src="src/js/controllers/HopsCtrl.js"></script>
-  <script src="src/js/controllers/YeastCtrl.js"></script>
-	<script src="src/js/services/TestService.js"></script>
+  <script src="dist/js/controllers/MainCtrl.min.js"></script>
+  <script src="dist/js/controllers/StyleCtrl.min.js"></script>
+  <script src="dist/js/controllers/HopsCtrl.min.js"></script>
+  <script src="dist/js/controllers/YeastCtrl.min.js"></script>
+	<script src="dist/js/services/TestService.min.js"></script>
 
-  <script src="dist/js/app.min.js"></script>
-  <script src="src/js/app.js"></script>
+  <script src="dist/js/lib/app.min.js"></script>
+  <script src="app.js"></script>
 
 </head>
 <body>
