--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
   <link rel="icon" type="image/png" href="favicon.png">
 
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
+
   <link rel="stylesheet" href="dist/css/app.min.css">
 
   <script src="libs/angular/angular.min.js"></script>
@@ -47,20 +49,16 @@
                           </a>
                           <div class="media-body">
                               <h4 class="media-heading">User Name</h4>
-                      		    <p><span class="label label-info">888 photos</span> <span class="label label-warning">150 followers</span></p>
-                              <p>
-                                  <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-comment"></span> Profile</a>
-                                  <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-heart"></span> Sign Out</a>
-                              </p>
+                      		    <p><span class="label label-info">Administrator</span></p>
                           </div>
                       </div>
                   </div>
             	</div>
             </div>
           </li>
-          <li><a ui-sref="styles">BJCP Styles</a></li>
-          <li><a ui-sref="hops">Hops</a></li>
-          <li><a ui-sref="yeast">Yeast</a></li>
+          <li><a class="list-group-item" ui-sref="styles">BJCP Styles</a></li>
+          <li><a class="list-group-item" ui-sref="hops">Hops</a></li>
+          <li><a class="list-group-item" ui-sref="yeast">Yeast</a></li>
         </ul>
       </div>
 
